--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel='stylesheet' href='index.css'>
   </head>
   <body>
-
+    <button id='newNoteButton'>New</button>
     <script src='main.js'></script>
   </body>
 </html>
