--- a/index.html
+++ b/index.html
@@ -5,6 +5,15 @@
     <link rel='stylesheet' href='index.css'>
   </head>
   <body>
+    <nav>
+      <div id='titleWrapper'>
+        <h1>NoteApp</h1>
+      </div>
+      <div id='navButtons'>
+        <button id='addButton'>New Note</button>
+        <button id='deleteNotes'>Delete Notes</button>
+      </div>
+    </nav>
     <button id='newNoteButton'>New</button>
     <script src='main.js'></script>
   </body>
