--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
       </div>
     </nav>
     <button id='newNoteButton'>New</button>
-    <script src='main.js'></script>
+    <script src='lib/main.js'></script>
   </body>
 </html>
