added footer and todo sections

--- a/index.html
+++ b/index.html
@@ -14,7 +14,12 @@
         <button id='deleteNotes'>Delete Notes</button>
       </div>
     </nav>
-    <button id='newNoteButton'>New</button>
+    <section id='todoContainer'>
+
+    </section>
+    <footer>
+      
+    </footer>
     <script src='lib/main.js'></script>
   </body>
 </html>
