added addItem function

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <h1>NoteApp</h1>
       </div>
       <div id='navButtons'>
-        <button id='addButton'>New Note</button>
+        <button id='addButton' onclick="addItem()">New Note</button>
         <button id='deleteNotes'>Delete Notes</button>
       </div>
     </nav>
@@ -18,7 +18,7 @@
 
     </section>
     <footer>
-      
+
     </footer>
     <script src='lib/main.js'></script>
   </body>
