--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
 
     </section>
     <footer>
-
+      <p>
+        Copyright Brian Dennis 2016
+      </p>
     </footer>
     <script src='lib/main.js'></script>
   </body>
