added heading link

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
     <nav>
       <div id='titleWrapper'>
-        <h1>NoteApp</h1>
+        <a href='index.html'><h1>NoteApp</h1></a>
       </div>
       <div id='navButtons'>
         <button id='addButton' onclick="addItem()">New Note</button>
@@ -19,7 +19,7 @@
     </section>
     <footer>
       <p>
-        Copyright Brian Dennis 2016
+        Handcrafted by Brian Dennis 2016
       </p>
     </footer>
     <script src='lib/main.js'></script>
