--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
     <nav>
       <div id='titleWrapper'>
-        <a href='index.html'><h1>NoteApp</h1></a>
+        <a href='index.html'><h1>Todo List</h1></a>
       </div>
       <div id='navButtons'>
         <button id='addButton' onclick="addItem()">New Note</button>
